# scdtr1718

./: CMakeLists.txt  README.md  hello.cpp  hello3.cpp  hello4.h  hello5.cpp  hello5.h  hello6.h  hello7.h  main_hello2.cpp  main_hello3.cpp  main_hello4.cpp  main_hello6.cpp
asio/: async_console.cpp  async_console_exceptions.cpp  async_read_console.cpp  async_read_console_lambda.cpp  async_tcp_client.cpp  async_tcp_server.cpp  async_tcp_server_lambda.cpp  async_udp_server.cpp  async_udp_server_lambda.cpp  serial_async.cpp  sync_serialread.cpp  sync_serialwrite.cpp  sync_tcp_client.cpp  sync_tcp_server.cpp  sync_udp_client.cpp  sync_udp_server.cpp  timer_async.cpp  timer_sync.cpp
hello/: CMakeLists.txt  hello1.cpp  hello1.h  hello2.cpp  hello2.h  hello3.h  hello4.cpp  hello6.cpp  hello6.h  hello7.cpp  hello7.h  hello8.cpp  hello8.h  hello9.cpp  hello9.h  main_hello1.cpp  main_hello5.cpp  main_hello7.cpp  main_hello8.cpp  main_hello9.cpp
kilobyte/: kilobyte  kilobyte.cpp
pigpio/: test_i2c_master_slave.c
solids/: CMakeLists.txt  blocks1.cpp  cube1.h  cylinder1.h  friends.h  solid1.h
threads/: threadhello.cpp  threadhelloperiodic.cpp  threadhelloprio.cpp
vector/: main_vector.cpp  vector.h
