cmake_minimum_required(VERSION 3.6)
project(hello)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES_1 hello/main_hello1.cpp hello/hello1.cpp)
set(SOURCE_FILES_2 hello/main_hello2.cpp hello/hello2.cpp)
set(SOURCE_FILES_3 hello/main_hello3.cpp hello/hello3.cpp)
set(SOURCE_FILES_4 hello/main_hello4.cpp hello/hello4.cpp)
set(SOURCE_FILES_5 hello/main_hello5.cpp hello/hello5.cpp)
set(SOURCE_FILES_6 hello/main_hello6.cpp hello/hello6.cpp)
set(SOURCE_FILES_7 hello/main_hello7.cpp hello/hello7.cpp)
add_executable(hello1 ${SOURCE_FILES_1})
add_executable(hello2 ${SOURCE_FILES_2})
add_executable(hello3 ${SOURCE_FILES_3})
add_executable(hello4 ${SOURCE_FILES_4})
add_executable(hello5 ${SOURCE_FILES_5})
add_executable(hello6 ${SOURCE_FILES_6})
add_executable(hello7 ${SOURCE_FILES_7})
