cmake_minimum_required(VERSION 3.6)
project(hello)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES_1 main_hello1.cpp hello1.cpp)
set(SOURCE_FILES_2 main_hello2.cpp hello2.cpp)
set(SOURCE_FILES_3 main_hello3.cpp hello3.cpp)
set(SOURCE_FILES_4 main_hello4.cpp hello4.cpp)
set(SOURCE_FILES_5 main_hello5.cpp hello5.cpp)
set(SOURCE_FILES_6 main_hello6.cpp hello6.cpp)
set(SOURCE_FILES_7 main_hello7.cpp hello7.cpp)
set(SOURCE_FILES_8 main_hello8.cpp hello8.cpp)
add_executable(hello1 ${SOURCE_FILES_1})
add_executable(hello2 ${SOURCE_FILES_2})
add_executable(hello3 ${SOURCE_FILES_3})
add_executable(hello4 ${SOURCE_FILES_4})
add_executable(hello5 ${SOURCE_FILES_5})
add_executable(hello6 ${SOURCE_FILES_6})
add_executable(hello7 ${SOURCE_FILES_7})
add_executable(hello8 ${SOURCE_FILES_8})
